# MoonJoy

./: .gitignore  build.py  pyproject.toml  setup_cx.py
.github/workflows/: build-release.yml
assets/: icon.icns
moonjoy/: __init__.py  __main__.py  autostart.py  config.py  gui.py  image_scanner.py  nasa_data.py  screensaver.py  updater.py  wallpaper.py  wallpaper_daemon.py
scripts/: build_linux_deb.sh  build_macos_dmg.sh  build_windows_msi.bat  set_lockscreen.ps1
website/: generate_screenshots.py  moonjoy.css  moonjoy.html
